AmineProd/postgresql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: Prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:15.3-alpine
        ports:
        - containerPort: 5432
