AmineProd/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: prod
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None  # Use None for headless service if you want to manage manually
