AmineProd/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: production
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30012
