AmineProd/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: production
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30011
